@@ -1,0 +1,4 @@
+
+# Query ID 0xBA2547D924C5140D at byte 0
+# WARN CLA.007 ORDER BY different directions prevents index from being used.
+select c1, c2 from t where i=1 order by c1 desc, c2 asc
